# planparser

./: .bumpversion.cfg  CONTRIBUTING.rst  README.rst  pyproject.toml  tasks.py
.github/: ISSUE_TEMPLATE.md
docs/: conf.py  index.rst  installation.rst  usage.rst
planparser/: __init__.py  cli.py  planparser.py
tests/: __init__.py  test_area_parsing.py  test_parse_result.py  test_planparser.py
tests/test_data/: floorplans.yaml
